# mirai-ws

./: .gitignore  Cargo.toml  LICENSE  README.md
roadmap/: ver-0.0.2.md
src/: conn.rs  lib.rs
src/protocol/: common.rs  message.rs  mod.rs  recieve.rs  reply.rs  response.rs
src/tests/: deserde.rs  mod.rs
src/tests/mockdata/rx/: msg_pack.json  resp_pack.json
src/tests/mockdata/rx/msg/: forward.json
