[package]
name = "mirai-ws"
version = "0.0.1"
edition = "2018"
repository = "https://github.com/4t145/mirai-ws"
description = "mirai-http-api rust interface, based on tungstenite. "
license = "MIT"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.16"
tokio = {version = "1.9.0", features = ["rt-multi-thread", "macros", "net", "time", "sync"]}
futures-util = {version = "0.3.16", default-features = false, features = ["async-await", "sink", "std"] }
tokio-tungstenite = "0.15.0"

serde_json = "1.0.64"
serde_repr = "0.1.7"
serde = {version = "1.0.126", features = ["derive"]}